--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,21 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PomodoroClock
 excludes=
+file.reference.jl1.0.1.jar=C:\\Users\\laura\\Desktop\\Minim Sound Libraries-20210712T214921Z-001\\Minim Sound Libraries\\jl1.0.1.jar
+file.reference.jsminim.jar=C:\\Users\\laura\\Desktop\\Minim Sound Libraries-20210712T214921Z-001\\Minim Sound Libraries\\jsminim.jar
+file.reference.minim.jar=C:\\Users\\laura\\Desktop\\Minim Sound Libraries-20210712T214921Z-001\\Minim Sound Libraries\\minim.jar
+file.reference.mp3spi1.9.5.jar=C:\\Users\\laura\\Desktop\\Minim Sound Libraries-20210712T214921Z-001\\Minim Sound Libraries\\mp3spi1.9.5.jar
+file.reference.tritonus_aos.jar=C:\\Users\\laura\\Desktop\\Minim Sound Libraries-20210712T214921Z-001\\Minim Sound Libraries\\tritonus_aos.jar
+file.reference.tritonus_share.jar=C:\\Users\\laura\\Desktop\\Minim Sound Libraries-20210712T214921Z-001\\Minim Sound Libraries\\tritonus_share.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jl1.0.1.jar}:\
+    ${file.reference.jsminim.jar}:\
+    ${file.reference.minim.jar}:\
+    ${file.reference.mp3spi1.9.5.jar}:\
+    ${file.reference.tritonus_aos.jar}:\
+    ${file.reference.tritonus_share.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
