--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=PomodoroClock
+application.vendor=Luan
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,22 +33,11 @@ dist.jar=${dist.dir}/PomodoroClock.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PomodoroClock
+endorsed.classpath=
 excludes=
-file.reference.jl1.0.1.jar=C:\\Users\\laura\\Desktop\\Minim Sound Libraries-20210712T214921Z-001\\Minim Sound Libraries\\jl1.0.1.jar
-file.reference.jsminim.jar=C:\\Users\\laura\\Desktop\\Minim Sound Libraries-20210712T214921Z-001\\Minim Sound Libraries\\jsminim.jar
-file.reference.minim.jar=C:\\Users\\laura\\Desktop\\Minim Sound Libraries-20210712T214921Z-001\\Minim Sound Libraries\\minim.jar
-file.reference.mp3spi1.9.5.jar=C:\\Users\\laura\\Desktop\\Minim Sound Libraries-20210712T214921Z-001\\Minim Sound Libraries\\mp3spi1.9.5.jar
-file.reference.tritonus_aos.jar=C:\\Users\\laura\\Desktop\\Minim Sound Libraries-20210712T214921Z-001\\Minim Sound Libraries\\tritonus_aos.jar
-file.reference.tritonus_share.jar=C:\\Users\\laura\\Desktop\\Minim Sound Libraries-20210712T214921Z-001\\Minim Sound Libraries\\tritonus_share.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.jl1.0.1.jar}:\
-    ${file.reference.jsminim.jar}:\
-    ${file.reference.minim.jar}:\
-    ${file.reference.mp3spi1.9.5.jar}:\
-    ${file.reference.tritonus_aos.jar}:\
-    ${file.reference.tritonus_share.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
